[tool.poetry]
name = "aionettools"
version = "0.1.0"
description = "Network utilities for Python using asyncio"
authors = ["Paulo Costa <me@paulo.costa.nom.br>"]
packages = [
    { include = "aionettools" },
]
[tool.poetry.scripts]
aionetttools = 'aionettools.main:app'
aioping = 'aionettools.ping:app'
aiondt7 = 'aionettools.ndt7:app'

[tool.poetry.dependencies]
python = "^3.10"
cachetools = "^5.2.0"
typing-extensions = "^4.3.0"
httpx = "^0.23.0"
websockets = "^10.3"
progressbar2 = "^4.0.0"
more-itertools = "^8.13.0"
typer = {git = "https://github.com/paulo-raca/typer.git", branch = "custom-types"}
sortedcontainers = "^2.4.0"
yarl = "^1.8.1"
aiotestspeed = {git = "https://github.com/abrookins/aiotestspeed.git"}
pytimeparse = "^1.1.8"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.961"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
src_paths = ["aionettools", "tests"]
profile = "black"
indent = 4
combine_star = true
combine_as_imports = true
lines_after_imports = 2
known_first_party = ["aionettools"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
